<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="cancel">Hủy</string>
	<string name="message">thông báo</string>
    <string name="change_pass_clear">Nhập lại</string>
	<string name="ok">OK</string>
	<string name="login">Đăng nhập</string>
	<string name="payment">Thanh toán</string>
	<string name="logup_en">Log up</string>
	<string name="send">Gửi</string>
	<string name="exit">Thoát</string>
	<string name="logup">Đăng ký</string>
	<string name="login_en">Login</string>
	<string name="contact">Mở danh bạ</string>
	<string name="payment_en">Payment</string>
	<string name="menu_settings">Settings</string>
	<string name="message_en">Message</string>
	<string name="phone">Số điện thoại</string>
	<string name="phone_en">Phone</string>
	<string name="fail">thất bại</string>
	<string name="success">thành công</string>
	<string name="captcha_en">Captcha</string>
	<string name="success_en">Success</string>
	<string name="captcha">Mã xác thực</string>
	<string name="apps_name">Alovi</string>
	<string name="app_name">Web Service</string>
	<string name="notknow"> not know</string>
	<string name="fail_en">Fails</string>
	<string name="accounttype_en">Normal User</string>
	<string name="accounttype">Tài khoản người dùng</string>
	<string name="putmoney">Số tiền nạp</string>
	<string name="putmoney_en">Put Money</string>
	<string name="contact_en">Contact</string>
	<string name="infoads">Thông tin khuyến mãi</string>
    
    <string name="topup_tratruoc">Trả Trước</string>
    <string name="topup_trasau">Trả Sau</string>
    <string name="bankname1">Vietcombank</string>
    <string name="bankname2">Đông Á</string>
    <string name="bankname3">NH Nông nghiệp</string>
    <string name="bankname4">Sacombank</string>
    <string name="bankname5">BIDV</string>
    <string name="bankname6">ACB</string>
    <string name="bankname7">Techcombank</string>
    <string name="bankname8">Eximbank</string>
    <string name="bankname9">Agribank</string>
    <string name="config_title">Cấu hình Alovi</string>
    
    <string name="const_topup_asia_serviceid">8706</string>
    <string name="const_topup_vcoin_serviceid">7953</string>
    <string name="const_card_gatefpt_serviceid">9858</string>
    <string name="const_card_softnyx_serviceid">9859</string>
    <string name="const_card_vcoin_serviceid">9856</string>
    <string name="const_card_zingxu_serviceid">9857</string>
    
	<string name="user_register_firstname_en">First Name</string>
	<string name="user_register_lastname_en">Last Name</string>
	<string name="user_register_email">Email</string>
    <string name="user_register_title">Đăng ký</string>
	<string name="user_register_firstname">Tên</string>
	<string name="user_register_lastname">Họ</string>
	<string name="user_register_username">Tên đăng nhập</string>
	<string name="user_register_agreementcheck1">Tôi đồng ý với <a href="https://alovi.com.vn/index.php/article/privacy_policy">các chính sách.</a></string>
    <string name="user_register_password">Mật khẩu</string>
    <string name="user_register_oldpassword">Mật khẩu cũ</string>
    <string name="user_register_newpassword">Mật khẩu mới</string>
    <string name="user_register_renewpassword">Nhập lại MK mới</string>
	<string name="user_register_password_en">Password</string>
	<string name="user_register_username_en">User Name</string>
	<string name="user_register_repassword">Nhập lại MK</string>
	<string name="user_register_repassword_en">Confirm Password</string>
	<string name="user_register_phone">Số điện thoại</string>
	<string name="user_register_phone_en">Phone</string>
	<string name="user_login_title">Đăng nhập</string>
    <string name="user_address">Địa chỉ</string>
    <string name="user_ortheraddress">Địa chỉ khác</string>
    <string name="user_register_bankid">Tên ngân hàng</string>
    <string name="user_register_bankaccountnumber">Số tài khoản NH</string>
    <string name="user_register_bankaccountname">Tên tài khoản NH</string>
    
	<string name="text_ok">OK</string>
	<string name="txt_error">txt_error</string>
    <string name="txtChangePass">txtChangePass</string>
	<string name="text_check_net_fail">Không có kết nối Wifi hoặc 3G ra Internet!</string>
	<string name="txt_title_close">Thoát</string>
	<string name="text_quit">Thoát</string>
	<string name="text_continue">Tiếp tục</string>
	<string name="text_back">Quay lại</string>
	<string name="txt_dialog_title">dialog title</string>
	<string name="txt_request_register">txt_request_register</string>
	<string name="txt_warning">txt_warning</string>
	<string name="text_yes">Yes</string>
	<string name="text_no">No</string>
    <string name="text_title_direct_input">text_title_direct_input</string>
    <string name="txt_event_title">txt_event_title</string>
    <string name="txt_mycart_confirm_payment_title">Giao dịch</string>
    <string name="txt_mywallet_info_title">Truy vấn số dư</string>
    <string name="txt_changepassword_title">Đổi mật khẩu</string>
    <string name="txt_my_cart_title">Thanh toán</string>
    <string name="txt_edit_myinfo_title">Thông tin cá nhân</string>
    <string name="txt_discounts_title">Mức chiếc khấu</string>
    <string name="txt_transaction_history_title">Lịch sử giao dịch</string>
    <string name="text_alovi_about">Thông tin Alovi</string>
    <string name="txt_unit_vietnamdong">  đồng</string>
    <string name="txt_mycart_confirm_payment_msg">Yêu cầu giao dịch của bạn đã được chấp nhận.</string>
    <string name="txt_total_amount_text">tổng tiền</string>
    <string name="txt_total_amount">đồng</string>
    <string name="txt_event_notice">txt_event_notice</string>
    <string name="txt_event_event_news">txt_event_event_news</string>
    <string name="text_developing">Đang phát triển</string>
    <string name="txt_register">Đăng ký</string>
    <string name="txt_logo">Alovi</string>
    <string name="txt_payment_amount">Số tiền</string>
    <string name="txt_payment_amount_en">Amount</string>
    <string name="txt_payment_serviceid">Mã dịch vụ</string>
    <string name="txt_account_asia">Tài khoản asia</string>
    <string name="txt_account_vcoin">Tài khoản vcoin</string>
    <string name="txt_account_game">Số tài khoản</string>
    <string name="txt_account">Số điện thoại/tài khoản game</string>
    <string name="txt_account_mobile">Số điện thoại:</string>
    <string name="txt_account_mobile_en">Number Phone</string>
    <string name="txt_column1">Mã DV</string>
    <string name="txt_column2">Chiết khấu</string>
    <string name="txt_column3">state</string>
    <string name="txt_column4">Tên DV</string>
    <string name="txt_vcoin_card">Thẻ vcoin</string>
    <string name="txt_gatefpt_card">Thẻ Gate FPT</string>
    <string name="txt_zingxu_card">Thẻ Zing Xu</string>
    <string name="txt_softnyx_card">Thẻ Softnyx</string>
    <string name="txt_note_money1">Số tiền là bội số của 5.000đ!</string>
    <string name="txt_note_money2">Số tiền là bội số của 1.000đ!</string>
    <string name="txt_sodu_tkalovi">Số dư alovi</string>
    <string name="text_help_title_menu">Trợ giúp</string>
    <string name="txt_transfer_title">Chuyển khoản</string>
    <string name="txt_note_transfer">Mô tả</string>
    <string name="txt_account_name_transfer">Tên tài khoản Aloví nhận</string>
    <string name="txt_pin_transfer">Mã PIN</string>
    <string name="txt_config_service_context">Service API</string>
    <string name="txt_config_host">Host</string>
    <string name="txt_vcoin_topup_title">Thanh toán Vcoin Topup</string>
    <string name="txt_asia_topup_title">Thanh toán Asia Topup</string>
    <string name="txt_gatefpt_card_title">Thanh toán Thẻ Gatefpt</string>
    <string name="txt_softnyx_card_title">Thanh toán Thẻ Softnyx</string>
    <string name="txt_topup_title">Thanh toán Topup</string>
    <string name="txt_vcoin_card_title">Thanh toán Thẻ Vcoin</string>
    <string name="txt_zingxu_card_title">Thanh toán Thẻ Zingxu</string>
    <string name="txt_not_exists_storage">Not exists Storages!</string>
    
	<string name="msg_exist_confirm">Bạn muốn thoát?</string>
	<string name="msg_processing">Đang xử lý. . .</string>
	<string name="msg_connect_server_fail">Lỗi kết nối đến server!</string>
    <string name="msg_userreg_inputrepass">Nhập lại mật khẩu chưa đúng!</string>
    <string name="msg_missing_input">Chưa nhập đầy đủ thông tin!</string>
	<string name="msg_register_agreementnotcheck">Bạn phải đồng ý với  <a href="https://alovi.com.vn/index.php/article/privacy_policy">các chính sách </a>của chúng tôi.</string>
	<string name="msg_userreg_inputallfield">Cần nhập đầy đủ các thông tin đúng.</string>
	<string name="msg_userreg_dupusername">Tên đăng nhập hoặc mật khẩu không đúng</string>
	<string name="msg_userreg_authcode_notmatch">msg_userreg_authcode_notmatch</string>
	<string name="msg_store_info_not_exist">msg_store_info_not_exist</string>
	<string name="msg_mycart_order_created">msg_mycart_order_created</string>
	<string name="msg_mycart_order_canceled">msg_mycart_order_canceled</string>
	<string name="msg_mycart_order_paid">msg_mycart_order_paid</string>
	<string name="msg_mycart_order_requested">msg_mycart_order_requested</string>
	<string name="msg_mycart_order_served">msg_mycart_order_served</string>
	<string name="msg_call_to_pos">msg_call_to_pos</string>
    <string name="msg_changepassword_null">Mật khẩu bị bỏ trống!</string>
    <string name="msg_changepassword_success">Đổi mật khẩu thành công</string>
    <string name="msg_changepassword_fail">Đổi mật khẩu bị lỗi!</string>
    <string name="msg_edit_info_complete">Đã cập nhật thông tin cá nhân</string>
    <string name="msg_table_occupied">msg_table_occupied</string>
</resources>
