<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

<TextView
	android:id="@+id/txtPayment"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/payment"
	android:layout_x="3dp"
	android:layout_y="6dp" />
<AutoCompleteTextView
	android:id="@+id/atvPhone"
	android:layout_width="212dp"
	android:layout_height="wrap_content"
	android:text="@string/phone_en"
	android:textSize="18sp"
	android:phoneNumber="true"
	android:autoText="true"
	android:layout_x="26dp"
	android:layout_y="168dp" />
<Button
	android:id="@+id/btnContact"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/contact"
	android:layout_x="237dp"
	android:layout_y="171dp"
	android:onClick="btnContact_click" />
<Spinner
	android:id="@+id/spnPutMoney"
	android:layout_width="180dp"
	android:layout_height="wrap_content"
	android:layout_x="141dp"
	android:layout_y="116dp" />
<TextView
	android:id="@+id/txtPutMoney"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/putmoney"
	android:layout_x="8dp"
	android:layout_y="117dp" />
<TextView
	android:id="@+id/txtPhone"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/phone"
	android:layout_x="4dp"
	android:layout_y="152dp" />
<TextView
	android:id="@+id/txtAccounttype"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/accounttype"
	android:layout_x="120dp"
	android:layout_y="4dp" />
<Button
	android:id="@+id/btnSend"
	android:layout_width="79dp"
	android:layout_height="wrap_content"
	android:text="@string/send"
	android:layout_x="119dp"
	android:layout_y="207dp"
	android:onClick="btnPayment_click" />
<ListView
	android:id="@android:id/list"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_x="138dp"
	android:layout_y="30dp" />
<Spinner
	android:id="@+id/spnPaymentType"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_x="6dp"
	android:layout_y="29dp" />
</AbsoluteLayout>
