<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        layout="@layout/main_top_menu_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_minimi_black_bg" >

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_column1"
                android:textColor="@color/white" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_column2"
                android:textColor="@color/white" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_column3"
                android:textColor="@color/white" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_column4"
                android:textColor="@color/white" />
        </TableRow>
        
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:background="@drawable/common_black_bg"
            android:orientation="vertical"
            android:padding="1dp" >

            <ListView
                android:id="@+id/lvOder"
                android:fadingEdge="none"
            	android:fadeScrollbars="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
             >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/main_bottom_menu_layout" />

</LinearLayout>