<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include layout="@layout/main_top_menu_layout" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:shrinkColumns="0"
        android:stretchColumns="1" >
        <TableRow android:paddingTop="5dip" >
            <TextView
                android:gravity="right"
                android:paddingRight="5dip"
                android:text="@string/user_register_oldpassword"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txtOldPassword"
                android:inputType="textPassword"
				android:layout_width="fill_parent" >
				<requestFocus />
            </EditText>
        </TableRow>
        
        <TableRow android:paddingTop="5dip" >
            <TextView
                android:gravity="right"
                android:paddingRight="5dip"
                android:text="@string/user_register_newpassword"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txtNewPassword"
                android:inputType="textPassword"
				android:layout_width="fill_parent" >
            </EditText>
        </TableRow>

        <TableRow android:paddingTop="5dip" >
            <TextView
                android:gravity="right"
                android:paddingRight="5dip"
                android:text="@string/user_register_renewpassword"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txtReNewPassword"
                android:inputType="textPassword"
				android:layout_width="fill_parent" >
            </EditText>
        </TableRow>
    </TableLayout>
    
    <TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:stretchColumns="0,2,4" >
	    <TableRow>
			<TextView />
            <Button
                android:id="@+id/btn_changepass_save"
                android:layout_gravity="center"
                android:background="@drawable/btn_send"
	            android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
       		<TextView />
       	</TableRow>
    </TableLayout>

    <include layout="@layout/main_bottom_menu_layout" />
</LinearLayout>